--- a/LeckerBag/WebContent/impressum.html
+++ b/LeckerBag/WebContent/impressum.html
@@ -10,68 +10,17 @@
         <link href="css/bootstrap.css" rel="stylesheet">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href="css/bootstrap-responsive.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
+        <script src="js/jquery.js"></script> 
+        <script> 
+			$(function(){
+			  $("#header").load("header.html"); 
+			  $("#footer").load("footer.html"); 
+			});
+		</script>        
     </head>     
-    <body>
-        <div class="row">
-            <div class="text-right col-md-12" id="nav_sn">
-                <a href="#" class="nav_sn_link"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="nav_sn_link"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="nav_sn_link"><i class="fa fa-google-plus"></i></a>
-                <a href="#" class="nav_sn_link"><i class="fa fa-tumblr"></i></a> 
-            </div>             
-        </div>         
-        <div class="row" id="logo"> 
-            <div class="col-md-4 hidden-sm hidden-xs text-right" id="logo_left">
-</div>             
-            <div class="col-md-4 text-center" id="logo_inner"> 
-                <img src="pics/logo_white.png" style="padding-top:20px; padding-bottom:20px" height="300">
-            </div>             
-            <div class="col-md-4 hidden-xs hidden-sm text-left" id="logo_right">
-</div>             
-        </div>         
-        <div class="container"> 
-</div>         
-        <div class="container"> 
-</div>
-        <div class="row" data-pg-collapsed>
-            <div class="col-md-12">
-                <nav class="navbar navbar-default nav_button" role="navigation"> 
-                    <div class="container-fluid" id="navigation_bar"> 
-                        <div class="navbar-header" data-pg-collapsed> 
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> 
-                                <span class="sr-only">Toggle navigation</span> 
-                                <span class="icon-bar"></span> 
-                                <span class="icon-bar"></span> 
-                                <span class="icon-bar"></span> 
-                            </button>                             
-                        </div>                         
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
-                            <ul class="nav navbar-nav navbar_container"> 
-                                <li class="nav_item"> 
-                                    <a href="index.html">Startseite</a> 
-                                </li>                                 
-                                <li class="nav_item"> 
-                                    <a href="suche.html">Suche</a> 
-                                </li>                                 
-                                <li class="nav_item">
-                                    <a href="dashboard_kunde.html">Mein Leckerbag</a> 
-                                </li>                                 
-                                <li class="nav_item"> 
-                                    <a href="#">Über Uns</a> 
-                                </li>                                 
-                                <li class="nav_item"> 
-                                    <a href="#">Kontakt</a> 
-                                </li>                                 
-                                <li class="nav_item_last"> 
-                                    <a href="login.html">Registrieren</a> 
-                                </li>                                 
-                            </ul>                             
-                        </div>                         
-                    </div>                     
-                </nav>                 
-            </div>             
-        </div>
+    <body>       
+    <div class="row" id="header"></div>               
         <div class="row" data-pg-collapsed id="impressum.html">
             <div class="col-md-12" data-pg-collapsed>
                 <div class="container wrapper" data-pg-collapsed>
@@ -103,7 +52,6 @@ Diese Website benutzt Google Analytics, einen Webanalysedienst der Google Inc. (
 Diese Website benutzt Google Adsense, einen Webanzeigendienst der Google Inc., USA (''Google''). Google Adsense verwendet sog. ''Cookies'' (Textdateien), die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglicht. Google Adsense verwendet auch sog. ''Web Beacons'' (kleine unsichtbare Grafiken) zur Sammlung von Informationen. Durch die Verwendung des Web Beacons können einfache Aktionen wie der Besucherverkehr auf der Webseite aufgezeichnet und gesammelt werden. Die durch den Cookie und/oder Web Beacon erzeugten Informationen über Ihre Benutzung diese Website (einschließlich Ihrer IP-Adresse) werden an einen Server von Google in den USA übertragen und dort gespeichert. Google wird diese Informationen benutzen, um Ihre Nutzung der Website im Hinblick auf die Anzeigen auszuwerten, um Reports über die Websiteaktivitäten und Anzeigen für die Websitebetreiber zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen zu erbringen. Auch wird Google diese Informationen gegebenenfalls an Dritte übertragen, sofern dies gesetzlich vorgeschrieben oder soweit Dritte diese Daten im Auftrag von Google verarbeiten. Google wird in keinem Fall Ihre IP-Adresse mit anderen Daten der Google in Verbindung bringen. Das Speichern von Cookies auf Ihrer Festplatte und die Anzeige von Web Beacons können Sie verhindern, indem Sie in Ihren Browser-Einstellungen ''keine Cookies akzeptieren'' wählen (Im MS Internet-Explorer unter ''Extras > Internetoptionen > Datenschutz > Einstellung''; im Firefox unter ''Extras > Einstellungen > Datenschutz > Cookies''); wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website voll umfänglich nutzen können. Durch die Nutzung dieser Website erklären Sie sich mit der Bearbeitung der über Sie erhobenen Daten durch Google in der zuvor beschriebenen Art und Weise und zu dem zuvor benannten Zweck einverstanden.</p>
                                 <br> 
                                 Impressum vom 
-
                                 <a href="http://www.impressum-generator.de">Impressum-Generator</a> der 
                                 <a href="http://www.kanzlei-hasselbach.de/rechtsanwalt-internationales-familienrecht-frankfurt/">Kanzlei Hasselbach, Rechtsanwälte für internationales Familienrecht</a>
                             </div>
@@ -111,43 +59,14 @@ Diese Website benutzt Google Adsense, einen Webanzeigendienst der Google Inc., U
                     </div>
                 </div>                 
             </div>
-        </div>
-        <div class="row">
-            <div id="footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="text-center col-md-3" data-pg-collapsed="">
-                            <img src="pics/logo_grey.png" style="padding-top:20px; padding-bottom:20px" height="150">                             
-                        </div>
-                        <div class="col-md-9">
-                            <div class="row">
-                                <div class="col-md-6" data-pg-collapsed="">
-                                    <h4>Julius-Maximilians-Universität Würzburg</h4> 
-                                    <p class="bodytext">Sanderring 2<br>97070 Würzburg<br>Tel. 0931/31-0<br>Fax: 0931/31-82600&nbsp;</p>
-                                </div>
-                                <div class="col-md-6" data-pg-collapsed="">
-                                    <h4>LeckerBag - Ein Projekt von:<br></h4> 
-                                    <p>Lehrstuhl für Wirtschaftsinformatik und Systementwicklung</p>
-                                    <p class="bodytext"></p>
-                                    <p class="bodytext">Hubland Nord, Gebäude 32<br>Emil-Fischer-Straße 32<br>D-97074 Würzburg &nbsp;</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr class="hr_line hr_line_ext_footer">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6">
-                            <p>© LeckerBag, Uni-Würzburg. All rights reserved. <a href="impressum.html">Site credits</a><br></p> 
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
-                            <a>info@leckerbag.de</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>         
         <!-- Ende des Dokumentes -->         
-        <script src="js/jquery.js"></script>         
+        <div class="row" id="footer"></div> 
+        <script>
+	        $("#header").load("header.html", function(){
+	        	setNav(null);
+	        });
+        </script>             
         <script src="js/bootstrap.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
